FIX: preferences component bleeding onto main component

--- a/frontend/src/app/core/components/faculty/main/main.component.scss
+++ b/frontend/src/app/core/components/faculty/main/main.component.scss
@@ -229,7 +229,9 @@
 }
 
 .faculty-main-content {
+  @include hide-scrollbar;
   height: 100%;
+  overflow-y: auto;
 }
 
 .spinner-overlay {
